@@ -59,6 +59,7 @@ Bug fixes
  * Closing 'more' dropdown on explorer no longer jumps to the top of the page (Ducky)
  * Users with only publish permission are no longer given implicit permission to delete pages (Matt Westcott)
  * ``search_garbage_collect`` management command now works when wagtailsearchpromotions is not installed (Morgan Aubert)
+ * ``wagtail.contrib.settings`` context processor no longer fails when ``request.site`` is unavailable (Diederik van der Boor)
 
 Upgrade considerations
 ======================
